--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: navajowhite;
+}
+
 #app {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -11,7 +15,6 @@
   position: absolute;
   left: 50px;
   top: 250px;
-  transform: translateX(0px);
 }
 
 .box-inner {
